# clafooty

./: .gitignore  Cargo.toml  Makefile  README.md
football_data/: Cargo.toml  Makefile  api.sh
football_data/src/: api.rs  client.rs  dtos.rs
football_data/tests/: api_tests.rs  client_tests.rs  docker-compose.yml  get_standings_tests.rs
football_data/tests/wiremock/__files/: competition.json  competition_matches.json  invalid-api-token.json  matches.json  standings.json
football_data/tests/wiremock/mappings/: competition.json  competition_matches.json  invalid-api-token.json  matches.json  standings.json
sport_data/: Cargo.toml  Makefile  api.sh
sport_data/src/: api.rs  client.rs  dtos.rs  lib.rs
sport_data/tests/: api_tests.rs  client_tests.rs  docker-compose.yml
sport_data/tests/wiremock/__files/: seasons.json
sport_data/tests/wiremock/mappings/: error.json  seasons.json
src/: configuration.rs  display.rs  main.rs
src/application/: mappers.rs  mod.rs  print_current_fixtures.rs  print_standings.rs  print_today_fixtures.rs
src/domain/: mod.rs
src/scraper/: ligue2.rs  mod.rs
