[package]
name = "clafooty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
football_data = { path = "football_data" }
termcolor = { version = "1.1" }
clap = { version =  "3.2.16", features = ["derive"] }
chrono = { version = "0.4" }
