[package]
name = "clafooty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
football_data = { path = "football_data" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
scraper = "0.13.0"
termcolor = { version = "1.1" }
clap = { version =  "3.2.16", features = ["derive"] }
chrono = { version = "0.4" }
